# ElegantClipboard

./: .gitignore  CLAUDE.md  FEATURES.md  FEATURES_EN.md  Makefile  README.md  README_EN.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  scoop-bucket.yml  winget-publish.yml
bucket/: elegantclipboard.json
docs/: CODE_TODO.md  Changlog.md  abc.md
e2e/: smoke.spec.ts
public/: image-preview.html  text-preview.html
scripts/: bump-version.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh
src-tauri/nsis/template/: installer.nsi  utils.nsh
src-tauri/src/: admin_launch.rs  config.rs  game_mode.rs  hotkey.rs  i18n.rs  input_monitor.rs  keyboard_hook.rs  lib.rs  low_level_shortcut.rs  main.rs  main_thread.rs  positioning.rs  proxy.rs  shortcut.rs  task_scheduler.rs  updater.rs  utils.rs  webdav.rs  win_v_registry.rs
src-tauri/src/clipboard/: dedup.rs  format_write.rs  handler.rs  mod.rs  monitor.rs  rtf.rs  rtf_storage.rs  source_app.rs
src-tauri/src/commands/: clipboard.rs  data_transfer.rs  file_ops.rs  groups.rs  mod.rs  ocr.rs  preview.rs  settings.rs  sync.rs  translate.rs  window.rs  window_utils.rs
src-tauri/src/database/: mod.rs  repository.rs  schema.rs
src-tauri/src/tray/: mod.rs  tray_i18n.rs
src-tauri/src/webdav/: mod.rs
src/components/: CardContentRenderers.tsx  CardSubComponents.tsx  ClipboardItemCard.tsx  ClipboardList.tsx  HighlightText.test.tsx  (+6 more)
(+59 files in other folders)
